--- a/rejestracja.html
+++ b/rejestracja.html
@@ -65,7 +65,7 @@
         </div>
       </div>
 
-      <!-- Unnamed (Rectangle) -->
+      <!-- change -->
       <div id="u70" class="ax_default button">
         <div id="u70_div" class=""></div>
         <div id="u70_text" class="text ">
