--- a/rejestracja.html
+++ b/rejestracja.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <!-- head section -->
-    <title>Rejestracja</title>
+    <title>Rejestracja na zawody</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
     <link href="resources/css/axure_rp_page.css" type="text/css" rel="stylesheet"/>
@@ -65,7 +65,7 @@
         </div>
       </div>
 
-      <!-- change -->
+      <!-- Unnamed (Rectangle) -->
       <div id="u70" class="ax_default button">
         <div id="u70_div" class=""></div>
         <div id="u70_text" class="text ">
