--- a/rejestracja.html
+++ b/rejestracja.html
@@ -49,7 +49,7 @@
   <body>
     <div id="base" class="">
 
-      <!-- Unnamed (Rectangle) -->
+      <!-- edit change -->
       <div id="u68" class="ax_default box_3">
         <div id="u68_div" class=""></div>
         <div id="u68_text" class="text " style="display:none; visibility: hidden">
