--- a/rejestracja.html
+++ b/rejestracja.html
@@ -53,7 +53,7 @@
       <div id="u68" class="ax_default box_3">
         <div id="u68_div" class=""></div>
         <div id="u68_text" class="text " style="display:none; visibility: hidden">
-          <p></p>
+          <p>Poprawie sobie coś tutaj</p>
         </div>
       </div>
 
