--- a/rejestracja.html
+++ b/rejestracja.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html>
   <head>
-    <!-- head section -->
+    <!-- head section1 -->
     <title>Rejestracja</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
